examples/test/testpolicy2985.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2985
  namespace: namespace105
spec:
  podSelector:
    matchLabels:
      key14: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value4
          key7: value29
          key30: value48
      podSelector:
        matchLabels:
          key43: value23
          key20: value1
